--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,12 +51,12 @@
                 android:layout_marginStart="@dimen/standard_margin_2x"
                 android:layout_marginEnd="@dimen/standard_margin_2x"
                 android:layout_marginBottom="@dimen/standard_margin_2x"
+                android:onClick="@{() -> viewModel.loginClicked()}"
                 android:text="@string/login_loginButton"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/login_til_userId" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
