--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="standard_margin">8dp</dimen>
+    <dimen name="standard_margin_half">4dp</dimen>
     <dimen name="standard_margin_2x">16dp</dimen>
     <dimen name="standard_margin_3x">24dp</dimen>
 </resources>
