--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#0018A8</color>
     <color name="colorPrimaryDark">#001466</color>
     <color name="colorAccent">@color/colorPrimary</color>
+    <color name="background_filter_unchecked">#DDDDDD</color>
+
+    <color name="text_dark">#DE000000</color>
+    <color name="text_light">#DEFFFFFF</color>
 </resources>
