--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="de.adessomobile.postbookchallenge.ui.models.PostPresentationModel" />
+            type="de.adessomobile.postbookchallenge.ui.posts.PostPresentationModel" />
     </data>
 
     <androidx.cardview.widget.CardView
