--- a/app/src/main/res/layout/activity_post_comments.xml
+++ b/app/src/main/res/layout/activity_post_comments.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/postComments_tb_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -21,15 +21,11 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/postComments_rv_comments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".ui.postcomments.PostCommentsActivity"
-        tools:showIn="@layout/activity_post_comments">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        tools:listitem="@layout/item_comments_comment" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
